# vxs_sensor_ros2

./: CMakeLists.txt  README.md  package.xml
config/: and2_median_fast.json  and2_median_golden.json  and2_noMedian_fast.json  and2_noMedian_golden.json
docker/: run.sh  run_no_gpu.sh
rosinstall/: rosinstall
scripts/: vxs_py_subscriber.py
src/: common.hpp  vx_node.hpp  vxs_node.cpp  vxs_node.hpp  vxs_node_main.cpp
src/publisher/: vxs_node.cpp  vxs_node.hpp  vxs_node_main.cpp
src/subscriber/: vxs_subscriber.cpp  vxs_subscriber.hpp
